Deprecated methods fix; Sonalint tips